--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-251.1KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-4.88MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-2.41MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-250.3KB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 3ca3da44-d9e8-11ec-bbae-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-11.90MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-225.2KB/s(Youtube:不良林), server: us-02.pickaxe.sh, port: 443, type: trojan, password: 7J0Cmup52a7To8PI, sni: us-02.pickaxe.sh, skip-cert-verify: true}
+  - {name: 波兰-831.2KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 波兰-422.4KB/s(Youtube:不良林), server: 217.30.10.64, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 波兰-791.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
   - {name: 波兰-428.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 未知国家-3.71MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 波兰-363.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-250.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
+      - 波兰-831.2KB/s(Youtube:不良林)
+      - 波兰-422.4KB/s(Youtube:不良林)
+      - 波兰-791.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
       - 未知国家-3.71MB/s(Youtube:不良林)
+      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
