--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-11.90MB/s(Youtube:不良林), server: jupiter.hk.v4.e1dns.com, port: 443, type: vmess, uuid: 4a9e6b6e-ec2c-4b89-9df6-5118fa07f1d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-225.2KB/s(Youtube:不良林), server: us-02.pickaxe.sh, port: 443, type: trojan, password: 7J0Cmup52a7To8PI, sni: us-02.pickaxe.sh, skip-cert-verify: true}
-  - {name: 波兰-831.2KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 波兰-422.4KB/s(Youtube:不良林), server: 217.30.10.64, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 波兰-791.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 波兰-530.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 波兰-428.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 未知国家-3.71MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
-  - {name: 波兰-363.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-239.0KB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
+  - {name: 波兰-499.3KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-764.3KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 波兰-776.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 波兰-595.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇦 加拿大-349.0KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-11.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-225.2KB/s(Youtube:不良林)
-      - 波兰-831.2KB/s(Youtube:不良林)
-      - 波兰-422.4KB/s(Youtube:不良林)
-      - 波兰-791.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
+      - 波兰-530.6KB/s(Youtube:不良林)
       - 波兰-428.6KB/s(Youtube:不良林)
-      - 未知国家-3.71MB/s(Youtube:不良林)
-      - 波兰-363.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 波兰-499.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-764.3KB/s(Youtube:不良林)
+      - 波兰-776.6KB/s(Youtube:不良林)
+      - 波兰-595.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-349.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
